--- a/main.html
+++ b/main.html
@@ -11,17 +11,15 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<button type="button" class="btn btn-primary">Button-1</button>
-<button type="button" class="btn btn-secondary">>Button-2</button>
-<button type="button" class="btn btn-success">>Button-3</button>
-<button type="button" class="btn btn-danger">>Button-4</button>
-<button type="button" class="btn btn-warning">>Button-5</button>
-<button type="button" class="btn btn-info">>Button-6</button>
-<button type="button" class="btn btn-light">>Button-7</button>
-<button type="button" class="btn btn-dark">>Button-8</button>
 
-<button type="button" class="btn btn-link">>Button-8</button>
+	<button type="button" class="btn btn-primary">Button-1</button>
+	<button type="button" class="btn btn-light">Button-2</button>
+<button type="button" class="btn btn-success">Button-3</button>
+<button type="button" class="btn btn-danger">Button-4</button>
+<button type="button" class="btn btn-warning full-width">Button-5</button>
+<button type="button" class="btn btn-info">Button-6</button>
+<button type="button" class="btn btn-dark">Button-7</button>
+<button type="button" class="btn btn-link">Button-8</button>
 </body>
 
 </html>
